# portal-backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
.aws-sam/: build.toml
.github/: deploy_to_staging.yml
.github/workflows/: CI.yml  deploy_to_prod.yml  deploy_to_staging.yml  main.yml  secrets.yml
app/: auth_group_classes.py  error_middleware.py  helpers.py  id_generation.py  id_generation_classes.py  limiter.py  logger_config.py  main.py  mapping.py  models.py  request.py  requirements.txt  routes.py  settings.py
app/public/abtests/: 1.json
app/router/: abtest.py  auth.py  auth_group.py  batch.py  candidate.py  enrollment_record.py  exam.py  form.py  grade.py  group.py  group_session.py  group_type.py  group_user.py  program.py  routes.py  school.py  session.py  session_group.py  session_occurrence.py  student.py  student_exam_record.py  teacher.py  user.py  user_session.py
app/services/: auth_group_service.py  batch_service.py  candidate_service.py  exam_service.py  form_service.py  grade_service.py  group_service.py  group_user_service.py  school_mapping_constants.py  school_service.py  session_service.py  student_service.py  subject_service.py  teacher_service.py  user_service.py
app/utils/: form_details.py
docs/: ENV.md
router/: auth.py  group.py  session.py  student.py
templates/: prod.yaml  staging.yaml
