[project]
name = "portal-backend"
version = "0.1.0"
description = "The backend for Portal created using FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.6.2",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "click>=8.1.7",
    "fastapi>=0.116.1",
    "fastapi-jwt-auth>=0.5.0",
    "h11>=0.14.0",
    "httptools>=0.6.4",
    "idna>=3.10",
    "mangum>=0.19.0",
    "pydantic>=2.10.3",
    "PyJWT>=1.7.1,<2.0.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "sniffio>=1.3.1",
    "starlette>=0.41.3",
    "typing_extensions>=4.12.2",
    "urllib3>=2.2.3",
    "uvicorn>=0.32.1",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.0",
    "websockets>=14.1",
    "python-dateutil>=2.9.0",
    "boto3>=1.35.82",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
ignore = ["E501", "E203", "W503", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
